--- a/public/manifest.json
+++ b/public/manifest.json
@@ -17,7 +17,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["https://jira.wixpress.com/*"],
       "js": ["contentScript.js"]
     }
   ]
